# myCIAprofileGPT

./: .gitignore  README.md  ciaprofile.py  comprehensive_profile.json  example_profile.py  example_usage.py  install_dev.sh  organize_repo.py  profile_report.md  profile_templates.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py  test_ciaprofile.py  test_prompt_utils.py  updates.txt
ai-guides/: chatgpt-conversionstate.txt  chatgpt-distilling.txt  chatgpt-embedding.txt  chatgpt-fileinputs.txt  chatgpt-fine-tuning.txt  chatgpt-functioncalling.txt  chatgpt-guide.txt  chatgpt-images.txt  chatgpt-prompt-generation.txt  chatgpt-reasoning.txt  chatgpt-retrieval.txt  chatgpt-streaming.txt  chatgpt-structuredoutputs.txt  deepseek-guide.txt
config/: .env.example  pyrightconfig.json  requirements.txt
docs/: CHAT_INTERFACE_SETUP.md  CIABOT_THINKING.md  README.md
examples/: analyze_author.py
extraai/: chatgpt.py  deepseek.py  prompt_utils.py
output/: author_profile_20250405_160227_detailed_report.md  author_profile_20250405_160227_intelligence_report.md  author_profile_20250405_160227_metrics.json  author_profile_20250405_160227_profile.json  author_profile_20250405_160227_prompt.txt  author_profile_20250405_160227_reasoning.txt  author_profile_20250405_160227_security_profile.json  profile_20250405_164002_detailed_report.md  profile_20250405_164002_intelligence_report.md  profile_20250405_164002_metrics.json  profile_20250405_164002_profile.json  profile_20250405_164002_prompt.txt  profile_20250405_164002_reasoning.txt  (+1 more)
scripts/: setup_venv.sh  (+1 more)
(+30 files in other folders)
